<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/lblUtil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="90dp"
        android:text="@string/lblNomUtil" />

    <EditText
        android:id="@+id/txtNomUtil"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblUtil"
        android:ems="10"
        android:text="@string/txtUtil" android:inputType="text"/>

    <TextView
        android:id="@+id/lblMotPasse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/lblPasse" />

    <EditText
        android:id="@+id/txtMotPass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lblMotPasse"
        android:ems="10" android:inputType="textPassword"/>

    <Button
        android:id="@+id/btOuvrirSess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMotPass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:text="@string/btOuvrir" />

</RelativeLayout>
